# NetPredict-Public

./: .gitignore  README.md
CommNetworks2022/: README.md  XMLAD_MonroeFL.ipynb  XMLAD_NokiaFL.ipynb  XMLAD_NokiaLP.ipynb  XMLAD_synthetic_dataset.ipynb  requirements.txt
CommNetworks2022/src/: misc.py  models.py  ploting.py  preprocessing.py
MedComNet2022/: README.md  attribute_file.py  klnx_real_data.ipynb  klnx_synthetic_data.ipynb
MedComNet2022/data/: synthetic_dataset.csv
MedComNet2022/models/: model1_realdata  model1_syntheticdata  model2_realdata  model2_syntheticdata
SafeAI/: requirements.txt
SafeAI/data_lab/: 01_preprocessing.py  02_anomaly_detection.py  README.md  plot_functions.py  preprocessing_functions.py  pyproject.toml  requirements.txt
SafeAI/data_lab/decision_trees/: lim_10000kbit  lim_1000kbit  lim_20000kbit  lim_2000kbit  lim_50000kbit  lim_5000kbit
SafeAI/data_lab/notebooks/: 01_preprocessing.ipynb  02_anomaly_detection.ipynb  03_safeai_report.ipynb
SafeAI/data_lab/output_datasets/: removed_features_report.csv
SafeAI/data_lab/src/: detection.py  explainability.py  plot_functions.py  run_analysis.py  run_preprocessing.py  tree_utils.py
SafeAI/data_lab/src/data_lab/: config.py  detection.py  explainability.py  normality.py  plot_functions.py  preprocessing_functions.py  road.py  run_analysis.py  run_preprocessing.py  safeai.py  tree_utils.py
SafeAI/python/: 01-cleaning-small-tabular-data.ipynb  02-outlier-and-anomaly-detection-benchmark.ipynb  03-outlier-and-anomaly-detection.ipynb  OD_comparison.csv  collect_raw_data.py  (+2 more)
(+26 files in other folders)
