[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-lab"
version = "0.1.0"
description = "Anomaly detection and explainability pipeline for throughput limitation analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.5,<2",
    "scipy>=1.13,<2",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "shap>=0.45,<1",
    "xgboost>=2,<4",
    "pyod>=2,<3",
    "graphviz>=0.20,<1",
    "lightgbm>=4,<5",
    "safeaipackage>=0.8,<0.9",
    "joblib>=1.4,<2",
    "tqdm>=4.66,<5"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1,<2",
    "ipykernel>=6,<7",
    "pytest>=8,<9",
    "build>=1,<2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]